--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "mysql2": "^3.11.0",
     "next": "14.2.5",
     "next-auth": "^4.24.7",
