--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
+    "express": "^4.21.0",
     "mysql2": "^3.11.0",
     "next": "14.2.5",
     "next-auth": "^4.24.7",
